# userver

./: .clang-format  .clang-tidy  .cmake-format.py  .gitignore  .mapping.json  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  THIRD_PARTY.md  build.txt  build_log.txt  conanfile.py  pyproject.toml  version.txt
chaotic/integration_tests/: CMakeLists.txt
chaotic/integration_tests/schemas/: all_of.yaml  array_of_xcpptype.yaml  const.yaml  custom_cpp_type.yaml  emoji_enum.yaml  indirect.yaml  int_minmax.yaml  no_sax.yaml  object_default_additional_properties.yaml  object_keywords.yaml  object_single_field.yaml  one_of.yaml  oneofdiscriminator.yaml  recursion.yaml
clickhouse/: CMakeLists.txt  README.md
clickhouse/functional_tests/basic_chaos/: clickhouse_service.cpp
clickhouse/functional_tests/metrics/: service.cpp  static_config.yaml
core/: CMakeLists.txt  library.yaml
core/benchmarks/: main.cpp
core/dynamic_configs/: BAGGAGE_SETTINGS.yaml  EGRESS_NO_PROXY_TARGETS.yaml  GRACEFUL_SHUTDOWN_HEADERS.yaml  HTTP_CLIENT_CONNECTION_POOL_SIZE.yaml  HTTP_CLIENT_CONNECT_THROTTLE.yaml  USERVER_CANCEL_HANDLE_REQUEST_BY_DEADLINE.yaml  USERVER_DEADLINE_PROPAGATION_ABSOLUTE_TIMESTAMP_ENABLED.yaml  USERVER_DEADLINE_PROPAGATION_CLOCK_SKEW_THRESHOLD_MS.yaml  USERVER_FILES_CONTENT_TYPE_MAP.yaml  USERVER_LOG_DYNAMIC_DEBUG.yaml  USERVER_LRU_CACHES.yaml  USERVER_RPS_CCONTROL.yaml  USERVER_RPS_CCONTROL_ACTIVATED_FACTOR_METRIC.yaml  USERVER_RPS_CCONTROL_CUSTOM_STATUS.yaml  USERVER_TASK_PROCESSOR_PROFILER_DEBUG.yaml  USERVER_TASK_PROCESSOR_QOS.yaml
core/functional_tests/: CMakeLists.txt
core/functional_tests/basic_chaos/: httpclient_handlers.hpp  httpserver_handlers.hpp  httpserver_with_exception_handler.hpp  resolver_handlers.hpp  service.cpp  static_config.yaml
core/functional_tests/cache_update/: service.cpp  static_config.yaml
core/functional_tests/dump_coroutines/: CMakeLists.txt  service.cpp  static_config.yaml
core/functional_tests/dynamic_configs/: service.cpp  static_config.yaml
core/functional_tests/early_monitor_port_open/: CMakeLists.txt  main.cpp  static_config.yaml
core/functional_tests/graceful_shutdown/: CMakeLists.txt  delaying_handler.hpp  main.cpp  static_config.yaml
core/functional_tests/http2server/: service.cpp  static_config.yaml
core/functional_tests/http_client_middlewares/: CMakeLists.txt  config_vars.yaml  main.cpp  static_config.yaml
core/functional_tests/http_client_plugins/: CMakeLists.txt  main.cpp  static_config.yaml
core/functional_tests/https/: CMakeLists.txt  httpserver_handlers.hpp  private_key.key  service.cpp  static_config.yaml
core/functional_tests/https_no_passphrase/: service.cpp  static_config.yaml
core/functional_tests/metrics/: service.cpp  static_config.yaml
core/functional_tests/sharded_http_handler_metrics/: CMakeLists.txt  main.cpp  static_config.yaml
core/functional_tests/signal_during_boot/: CMakeLists.txt  service.cpp  static_config.yaml
core/functional_tests/slow_start/: CMakeLists.txt  service.cpp  static_config.yaml
core/src/: testing_test.cpp
core/src/alerts/: source.cpp
core/static_configs/: dns_client.yaml
core/utest/: CMakeLists.txt
grpc/functional_tests/: CMakeLists.txt
grpc/handlers/: CMakeLists.txt
kafka/: CMakeLists.txt
kafka/tests/: configuration_test.cpp  consumer_kafkatest.cpp  headers_test.cpp  producer_kafkatest.cpp
kafka/utest/: CMakeLists.txt
libraries/: CMakeLists.txt
libraries/easy/: CMakeLists.txt
libraries/grpc-protovalidate/: CMakeLists.txt
libraries/grpc-reflection/: CMakeLists.txt
libraries/multi-index-lru/: CMakeLists.txt  library.yaml
libraries/protobuf/: CMakeLists.txt  ya.make  ya.make.ext
libraries/s3api/: CMakeLists.txt
mongo/: CMakeLists.txt  library.yaml
mongo/dynamic_configs/: MONGO_CONGESTION_CONTROL_SETTINGS.yaml  USERVER_DEADLINE_PROPAGATION_ENABLED.yaml
odbc/: CMakeLists.txt  README.md  library.yaml
odbc/dynamic_configs/: USERVER_ODBC_CONNECTION_POOL_SETTINGS.yaml  USERVER_ODBC_DEFAULT_COMMAND_CONTROL.yaml
odbc/functional_tests/: CMakeLists.txt
odbc/tests/: odbc_deadline_test.cpp  odbc_dsn_test.cpp  odbc_exceptions_test.cpp  odbc_metrics_test.cpp  odbc_postgresql_test.cpp  odbc_round_robin_pool_test.cpp  odbc_transaction_test.cpp
postgresql/libpq-version-generator/: CMakeLists.txt
postgresql/utest/: CMakeLists.txt
rabbitmq/: CMakeLists.txt
redis/: CMakeLists.txt  README.md  library.yaml
redis/benchmark/: redis_benchmark.cpp  redis_fixture.cpp
redis/dynamic_configs/: REDIS_COMMANDS_BUFFERING_SETTINGS.yaml  REDIS_IGNORE_HEALTH_CHECK.yaml  REDIS_REPLICA_MONITORING_SETTINGS.yaml
redis/functional_tests/: CMakeLists.txt
samples/chaotic_openapi_service/: CMakeLists.txt  main.cpp  static_config.user.yaml  static_config.yaml  ya.make
samples/cors_service/: CMakeLists.txt  main.cpp  static_config.yaml
samples/dns-resolver/: CMakeLists.txt  resolver.cpp
samples/http-client-perf/: CMakeLists.txt  httpclient_perf.cpp  requirements.txt
samples/netcat/: CMakeLists.txt
samples/periodic_task/: CMakeLists.txt  main.cpp  static_config.yaml
samples/postgres_service/: CMakeLists.txt  main.cpp  static_config.yaml
samples/scylla_service/: CMakeLists.txt  README.md  secdist.json  static_config.yaml
samples/ydb_topic_writer_service/: CMakeLists.txt  main.cpp  static_config.yaml
scripts/sqldto/: CMakeLists.txt  main.py  requirements.txt
sqlite/: CMakeLists.txt
ydb/: CMakeLists.txt  library.yaml
ydb/dynamic_configs/: YDB_DATABASE_ROUTING.yaml  YDB_QUERIES_COMMAND_CONTROL.yaml
ydb/tests/: coordination_test.cpp  dist_lock_test.cpp  execute_test.cpp  get_test.cpp  keep_in_query_cache_stats_test.cpp  list_test.cpp  parallel_data_query_test.cpp  retry_test.cpp  retry_tx_test.cpp  scan_table_test.cpp  schema_test.cpp  small_table.hpp  struct_from_row_test.cpp  struct_io_test.cpp  test_utils.hpp  topic_test.cpp  topic_writer_impl_types_test.cpp  topic_writer_mock_test.cpp  topic_writer_statistics_test.cpp  topic_writer_test.cpp  topic_writer_worker_test.cpp  tuple_io_test.cpp  types_test.cpp
ydb/utest/: CMakeLists.txt
(+4468 files in other folders)
